# brainrs

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
docs/: font.css  index.html  script.js  styles.css
src/: config.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  tester.rs
