[package]
name = "brainrs"
version = "0.1.0"
authors = ["Hipy Cas <hipycas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.0"
human-panic = "1.0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
